app/styles/_pages.scss
#sec-1 {
  background-image: linear-gradient(
    to right top,
    #ff7246,
    #ff6a4a,
    #ff624e,
    #ff5a53,
    #ff5158
  );
  height: 100vh;
  .hat {
    background: url("../images/hat_guy.png");
    background-position: bottom;
    background-repeat: no-repeat;
    height: 100vh;
    width: 80%;
    background-size: 100%;
    @media screen and (max-width: 468px) {
      width: 100%;
      background-size: cover;
      background-position-x: 30%;
      align-items: center !important;
    }
    .inner-container {
      max-width: 900px;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: start;
      margin: 0 auto;
    }
    .mumo-logo {
      padding-top: 5em;
    }
    .float-icon {
      cursor: pointer;
      position: absolute;
      bottom: 5rem;
      right: 50%;
      cursor: pointer;
      transition: all 0.2s ease-in-out;
      @media screen and (max-width: 468px) {
        right: auto;
      }
      &:hover {
        transform: translateY(-10px);
      }
    }
  }
}

.header {
  position: fixed;
  top: 0;
  height: 60px;
  background-color: rgba(255, 255, 255, 0.6);
  width: 100%;
  z-index: 2;
  .container {
    margin-top: 1rem;
  }
}

#sec-4 {
  height: 100vh;
  background: url("../images/bg.svg") center left no-repeat;
  background-size: 56%;
  background-position-x: -4rem;
  @media screen and (max-width: 900px) {
    background: none !important;
  }
}

.gradient-orange {
  background-image: linear-gradient(
    to right top,
    #ff7246,
    #ff6a4a,
    #ff624e,
    #ff5a53,
    #ff5158
  );
}

.gradient-orange-reverse {
  background-image: linear-gradient(
    to right bottom,
    #ff7246,
    #ff6a4a,
    #ff624e,
    #ff5a53,
    #ff5158
  );
}

.btn-mumo {
  background-color: white;
  color: $primary;
  border-radius: 4rem;
  min-width: 300px;
  font-weight: 600;
  height: 2.6rem;
  font-size: 1.2rem;
  margin-top: 2rem;
}

.btn-black {
  background-color: $secondary;
  font-weight: 600;
  color: white;
  transition: all 0.2s ease-in-out;
  &:hover {
    color: white;
    opacity: 0.8;
  }
}

.bg-gray {
  background-color: #f8f7fd;
}

.bg-final-gray {
  background: url("../images/bg-final.png") center center no-repeat;
  background-color: #f8f7fd;
}

.form-control:focus,
.custom-select:focus {
  border-color: #fb6253;
  box-shadow: 0 0 0 0.1rem rgba(251, 98, 83, 0.7) !important;
}

.form-contact {
  input[type="text"],
  select {
    height: 3.4rem;
    border: 0;
    border-bottom: 2px solid #f1f1f1;
    margin-bottom: 1.3rem;
  }
  textarea {
    border: 0;
    border: none !important;
    border-bottom: 2px solid #f1f1f1 !important;
  }
}

.video-frame {
  max-width: 760px !important;
  display: flex;
  margin: 0 auto;
}
.fixed-badge {
  position: fixed;
  right: 1rem;
  bottom: 1.5rem;
  font-size: 0.9rem;
  background: $text;
  color: white;
  padding: 1.5rem 1rem;
  border-radius: 10rem;
  cursor: pointer;
  a {
    color: white;
    text-decoration: none;
  }
  @media screen and (max-width: 900px) {
    opacity: 0;
    pointer-events: none;
  }
}

a {
  text-decoration: none;
  color: inherit;
  transition: all 0.2s ease-in-out;
  &:hover {
    color: inherit;
  }
}
.cursor-pointer {
  cursor: pointer;
}

.dropdown-item.active,
.dropdown-item:active {
  background-color: #000000 !important;
}

.item-card {
  cursor: pointer;
  background: transparent;
  border: 2px solid white;
  color: white;
  text-align: center;
  border-radius: 0.8rem;
  min-height: 220px;
  transition: all 0.2s ease-in-out;
  .card-footer{
    background-color: transparent;
    background: transparent;
  }
  &:hover {
    svg {
      #Retângulo_3082 {
        fill: #fb6253;
      }
      path {

        fill:#fb6253;

      }
    }
    color: #fb6253;
    .card-footer {
      border-radius: 0.8rem;
      background-color: transparent;
      background: transparent;
    }
    background: white;
    img {
      filter: brightness(0);
    }
  }
  @media  screen and (max-width: 600px) {
    width: 80%;
    min-height: 200px;
    .card-body {
      padding-bottom: 0;
    }
  }
}

.fade-in {
	opacity: 1;
	animation-name: fadeInOpacity;
	animation-iteration-count: 1;
	animation-timing-function: ease-in;
	animation-duration: .5s;
}

@keyframes fadeInOpacity {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

#text-content{
  min-height: 120px;
  font-size: 1.2rem;
  @media screen and (max-width: 900px){
  min-height: 100px;
    font-size: 1rem;
  }
}

